SFDC/VFP-Part-2/src/objects/Purchase_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Custom_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Custom Product</label>
        <referenceTo>Custom_Product__c</referenceTo>
        <relationshipLabel>PurchaseLineItems</relationshipLabel>
        <relationshipName>PurchaseLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_per_item__c</fullName>
        <label>Price per item</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>PurchaseLineItems</relationshipLabel>
        <relationshipName>PurchaseLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>Price_per_item__c  *  Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Purchase Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Purchase Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PurchaseLineItems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>